--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <a class="contact-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
           <li class="contact-item">
-            <a class="contact-link link"  href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a>
+            <a class="contact-link link"  href="tel:+11(000)111-11-11">+11(000)111-11-11</a>
           </li>
         </ul>
       </header>
@@ -150,7 +150,25 @@
        </main>
       <footer class="main-footer">
         <a class="main-logo link" lang="en" href="/">WebStudio</a>
-        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        <address class="address">
+          <ul class="address-items list">
+            <li class="address-item">
+              <a
+                class="address-contact link"
+                href="https://goo.gl/maps/Bq6WexbLNgEqduPN9"
+                target="_blank"
+                rel="noopener noreferrer"
+                >г. Киев, пр-т Леси Украинки, 26</a
+              >
+            </li>
+            <li class="address-item">
+              <a class="address-contact link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li class="address-item">
+              <a class="address-contact link" href="tel:+11(000)111-11-11">+11(000)111-11-11</a>
+            </li>
+          </ul>
+        </address>
       </footer>
 </body>
 </html>
