--- a/index.html
+++ b/index.html
@@ -9,166 +9,116 @@
 </head>
 <body>
     <!-- site header-->
-    <header class="menu-header">
-        <nav class="main-nav">
+    <header>
+        <nav>
           <!-- site logo-->
-          <a class="main-logo link" lang="en" href="/WebStudio">WebStudio</a>
+          <a href="./index.html">WebStudio</a>
           <!-- links in site header -->
-          <ul class="main-nav-items list">
-            <li class="nav-item"><a class="nav-link link" href="/Studio">Studio</a></li>
-            <li class="nav-item"><a class="nav-link link" href="/Portfolio">Portfolio</a></li>
-            <li class="nav-item"><a class="nav-link link" href="/Contacts">Contacts</a></li>
+          <ul>
+            <li><a class="nav-link link" href="/Studio">Studio</a></li>
+            <li><a class="nav-link link" href="/Portfolio">Portfolio</a></li>
+            <li><a class="nav-link link" href="/Contacts">Contacts</a></li>
           </ul>
         </nav>
         <!-- contacts in header -->
-        <ul class="contact-items list">
-          <li class="contact-item">
-            <a class="contact-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-          </li>
-          <li class="contact-item">
-            <a class="contact-link link"  href="tel:+11(000)111-11-11">+11(000)111-11-11</a>
-          </li>
-        </ul>
+        <address>
+         <ul>
+           <li>
+             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+           </li>
+           <li>
+             <a href="tel:+110001111111">+11(000)111-11-11</a>
+           </li>
+         </ul>
+        </address>
       </header>
       <!-- background:banner/picture/video? -->
-       <main class="main-content">
+       <main>
          <section class="hero">
-           <h1 class="hero-title">Effective Solutions for Your Business</h1>
-           <button class="btn-hero module-btn-hero" type="button">Order Service</button>
+           <h2>Effective Solutions for Your Business</h2>
+           <button>Order Service</button>
          </section>
          <!-- company advantages -->
-         <section class="section skils">
-           <ul class="skils-items list">
-             <li class="skils-item">
-               <h3 class="subtitle-skils">Strategy</h3>
-               <p class="text-skils">
+         <section>
+           <ul>
+             <li>
+               <h3>Strategy</h3>
+               <p>
                  Our goal is to identify the business problem to walk away with the perfect and creative solution. 
                </p>
              </li>
-             <li class="skils-item">
-               <h3 class="subtitle-skils">Punctuality</h3>
+             <li>
+               <h3>Punctuality</h3>
                <p>
                  Bring the key message to the brand's audience for the best price within the shortest possible time.
                </p>
              </li>
-             <li class="skils-item">
-               <h3 class="subtitle-skils">Diligence</h3>
-               <p class="text-skils">
+             <li>
+               <h3>Diligence</h3>
+               <p>
                  Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
                </p>
              </li>
-             <li class="skils-item">
-               <h3 class="subtitle-skils">Technologies</h3>
-               <p class="text-skils">
+             <li>
+               <h3>Technologies</h3>
+               <p>
                  Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
                </p>
              </li>
            </ul>
          </section>
          <!-- what does the company do -->
-         <section class="section gallery">
-           <h2 class="gallery-title">What are we doing</h2>
-           <ul class="gallery-items list">
-             <li class="gallery-item">
-               <img class="gallery-image"
-                src="./images/works-process1.jpg"
-                alt="close-up-image-programer-working-his-desk-office"
-                width="370"
-                height="294"/>
+         <section>
+           <h2>What are we doing</h2>
+           <ul>
+             <li>
+               <img
+                src="./images/works-process1.jpg" alt="close-up-image-programer-working-his-desk-office"
+                width="360"/>
              </li>
-             <li class="gallery-item">
-               <img class="gallery-image"
-                src="./images/works-process2.jpg"
-                alt="web-ui-designers-are-developing-application-smartphones-team-creators-is-working-interface-mobile-phones"
-                width="370"
-                height="294"/>
+             <li>
+               <img
+                src="./images/works-process2.jpg" alt="web-ui-designers-are-developing-application-smartphones-team-creators-is-working-interface-mobile-phones"
+                width="360"/>
              </li>
-             <li class="gallery-item">
-               <img class="gallery-image"
-                src="./images/works-process3.jpg"
-                alt="creative-artist-web-design-with-working-colour-selection-graphic-tablet"
-                width="370"
-                height="294"/>
+             <li>
+               <img
+                src="./images/works-process3.jpg" alt="creative-artist-web-design-with-working-colour-selection-graphic-tablet"
+                width="360"/>
              </li>
            </ul>
          </section>
   
          <!-- our team -->
-         <section class="section teams">
-            <h2 class="title-teams">Our Team</h2>
-            <ul class="teams-items list">
-              <li class="teams-item">
-                <a href="">
-                  <img class="teams-image"
-                    src="./images/foto1.jpg"
-                    alt="images Mark Guerrero"
-                    width="270"
-                    height="260"
-                  />
-                </a>
-                <h3 class="subtitle-teams">Mark Guerrero</h3>
-                <p class="teams-text" lang="en">Product Designer</p>
+         <section>
+            <h2>Our Team</h2>
+            <ul>
+              <li>
+                  <img src="./images/foto1.jpg" alt="images Mark Guerrero" width="264"/>
+                <h3>Mark Guerrero</h3>
+                <p>Product Designer</p>
               </li>
-              <li class="teams-item">
-                <a href="">
-                  <img class="teams-image"
-                    src="./images/foto2.jpg"
-                    alt="images Tom Ford"
-                    width="270"
-                    height="260"
-                  />
-                </a>
-                <h3 class="subtitle-teams">Tom Ford</h3>
-                <p class="teams-text" lang="en">Frontend Developer</p>
+              <li>
+                  <img src="./images/foto2.jpg" alt="images Tom Ford" width="264"/>
+                <h3>Tom Ford</h3>
+                <p>Frontend Developer</p>
               </li>
-              <li class="teams-item">
-                <a href="">
-                  <img class="teams-image"
-                    src="./images/foto3.jpg"
-                    alt="images Camila Garcia "
-                    width="270"
-                    height="260"
-                  />
-                </a>
-                <h3 class="subtitle-teams">Camila Garcia</h3>
-                <p class="teams-text" lang="en">Marketing</p>
+              <li>
+                  <img src="./images/foto3.jpg" alt="images Camila Garcia " width="264"/>
+                <h3>Camila Garcia</h3>
+                <p>Marketing</p>
               </li>
-              <li class="teams-item">
-                <a href="">
-                  <img class="teams-image"
-                    src="./images/foto4.jpg"
-                    alt="images Daniel Wilson"
-                    width="270"
-                    height="260"
-                  />
-                </a>
-                <h3 class="subtitle-teams">Daniel Wilson</h3>
-                <p class="teams-text" lang="en">UI Designer</p>
+              <li>
+                  <img src="./images/foto4.jpg" alt="images Daniel Wilson" width="264"/>
+                <h3>Daniel Wilson</h3>
+                <p>UI Designer</p>
               </li>
             </ul>
           </section>
        </main>
-      <footer class="main-footer">
-        <a class="main-logo link" lang="en" href="/">WebStudio</a>
-        <address class="address">
-          <ul class="address-items list">
-            <li class="address-item">
-              <a
-                class="address-contact link"
-                href="https://goo.gl/maps/Bq6WexbLNgEqduPN9"
-                target="_blank"
-                rel="noopener noreferrer"
-                >г. Киев, пр-т Леси Украинки, 26</a
-              >
-            </li>
-            <li class="address-item">
-              <a class="address-contact link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-            </li>
-            <li class="address-item">
-              <a class="address-contact link" href="tel:+11(000)111-11-11">+11(000)111-11-11</a>
-            </li>
-          </ul>
-        </address>
+      <footer>
+        <a href="./index.html">WebStudio</a>
+        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
       </footer>
 </body>
 </html>
